--- a/Project/Gemfile
+++ b/Project/Gemfile
@@ -24,7 +24,7 @@ gem 'jquery-rails'
 
 # To use ActiveModel has_secure_password
 gem 'bcrypt-ruby', '~> 3.0.0'
-gem 'delayed_job_active_record'
+
 
 # To use Jbuilder templates for JSON
 # gem 'jbuilder'
@@ -37,3 +37,6 @@ gem 'delayed_job_active_record'
 
 # To use debugger
 # gem 'debugger'
+
+gem 'delayed_job_active_record'
+gem 'carrierwave'
